Enhance ObjectiveProgressChart with action plan features and localization updates
- Introduced functionality to fetch and display action plans for objectives, improving user insights into failed reviews and actionable recommendations.
- Added a modal for generating action plans, enhancing interactivity and user engagement.
- Implemented loading states using skeleton components for better user experience during data fetching.
- Updated localization files to include new strings related to action plans in both English and French, ensuring consistency across languages.

This update strengthens the objectives management functionality by providing clearer insights into action plans and enhancing user engagement with goal tracking.

--- a/reviews/src/i18n/locales/fr.json
+++ b/reviews/src/i18n/locales/fr.json
@@ -945,6 +945,27 @@
       "saveFailed": "Échec de l'enregistrement de l'objectif"
     },
     "confirmDelete": "Confirmer la suppression",
-    "deleteMessage": "Êtes-vous sûr de vouloir supprimer cet objectif ? Cette action ne peut pas être annulée."
+    "deleteMessage": "Êtes-vous sûr de vouloir supprimer cet objectif ? Cette action ne peut pas être annulée.",
+    "selectObjective": "Sélectionner un objectif",
+    "noneSelected": "Aucun",
+    "year": "Année",
+    "timespan": "Période",
+    "allYear": "Toute l'année",
+    "objectiveDetails": "Détails de l'objectif",
+    "noReviewsForObjective": "Aucun avis trouvé pour la période de cet objectif",
+    "reviewCount": "{{count}} avis",
+    "actionPlan": {
+      "title": "Plan d'action",
+      "generate": "Générer un plan",
+      "generateTitle": "Générer un plan d'action",
+      "description": "Générez un plan d'action basé sur l'IA en fonction des avis qui n'ont pas atteint les objectifs. Le plan fournira 1 à 3 recommandations actionnables.",
+      "confirmation": "Cela analysera les avis échoués et créera un plan pour :",
+      "generating": "Génération en cours...",
+      "generatingNote": "Cela peut prendre quelques instants...",
+      "noPlan": "Aucun plan d'action généré pour le moment. Cliquez sur le bouton ci-dessus pour en générer un.",
+      "generatedAt": "Généré",
+      "noFailedReviews": "Aucun avis échoué trouvé pour cet objectif. Impossible de générer un plan d'action.",
+      "generationError": "Échec de la génération du plan d'action"
+    }
   }
 }
