--- a/reviews/src/i18n/locales/en.json
+++ b/reviews/src/i18n/locales/en.json
@@ -946,6 +946,27 @@
       "saveFailed": "Failed to save objective"
     },
     "confirmDelete": "Confirm Deletion",
-    "deleteMessage": "Are you sure you want to delete this objective? This action cannot be undone."
+    "deleteMessage": "Are you sure you want to delete this objective? This action cannot be undone.",
+    "selectObjective": "Select an Objective",
+    "noneSelected": "None",
+    "year": "Year",
+    "timespan": "Timespan",
+    "allYear": "All Year",
+    "objectiveDetails": "Objective Details",
+    "noReviewsForObjective": "No reviews found for this objective's time period",
+    "reviewCount": "{{count}} reviews",
+    "actionPlan": {
+      "title": "Action Plan",
+      "generate": "Generate Plan",
+      "generateTitle": "Generate Action Plan",
+      "description": "Generate an AI-powered action plan based on reviews that did not meet the objective targets. The plan will provide 1-3 actionable recommendations.",
+      "confirmation": "This will analyze failed reviews and create a plan for:",
+      "generating": "Generating...",
+      "generatingNote": "This may take a few moments...",
+      "noPlan": "No action plan generated yet. Click the button above to generate one.",
+      "generatedAt": "Generated",
+      "noFailedReviews": "No failed reviews found for this objective. Cannot generate action plan.",
+      "generationError": "Failed to generate action plan"
+    }
   }
 }
