Add Pass Score functionality to ObjectiveFormDialog and update localization
- Introduced a new Pass Score input field in ObjectiveFormDialog, allowing users to set a minimum score required for objectives to pass, defaulting to 100.
- Updated the calculateObjectiveStatus function in ObjectivesCard to incorporate the Pass Score for more accurate status determination.
- Enhanced localization files in English and French to include new strings for Pass Score and its helper text, ensuring consistency across languages.
- Updated the objectives service to handle Pass Score in objective creation and updates.

This update strengthens the objectives management functionality by providing clearer criteria for success and enhancing user engagement with goal tracking.

--- a/reviews/src/i18n/locales/en.json
+++ b/reviews/src/i18n/locales/en.json
@@ -887,10 +887,12 @@
     "descriptionPlaceholder": "Optional description of the objective",
     "startDate": "Start Date",
     "endDate": "End Date",
-    "targetRating": "Target Rating",
-    "targetRatingHelper": "Optional: Target average rating (0-5)",
+    "targetRating": "Target Average Review Rating",
+    "targetRatingHelper": "Optional: Target average review rating (0-5)",
     "targetSentiment": "Target Sentiment Score",
     "targetSentimentHelper": "Optional: Target sentiment score (0-100, where 50 is neutral)",
+    "passScore": "Pass Score",
+    "passScoreHelper": "Minimum score (0-100) required for objective to pass. Default is 100.",
     "priority": "Priority",
     "priorityHigh": "High",
     "priorityMedium": "Medium",
