--- a/reviews/src/i18n/locales/fr.json
+++ b/reviews/src/i18n/locales/fr.json
@@ -886,10 +886,12 @@
     "descriptionPlaceholder": "Description optionnelle de l'objectif",
     "startDate": "Date de début",
     "endDate": "Date de fin",
-    "targetRating": "Note cible",
-    "targetRatingHelper": "Optionnel: Note moyenne cible (0-5)",
+    "targetRating": "Note moyenne cible",
+    "targetRatingHelper": "Optionnel: Note moyenne cible des avis (0-5)",
     "targetSentiment": "Score de sentiment cible",
     "targetSentimentHelper": "Optionnel: Score de sentiment cible (0-100, où 50 est neutre)",
+    "passScore": "Score de passage",
+    "passScoreHelper": "Score minimum (0-100) requis pour que l'objectif soit réussi. Par défaut, 100.",
     "priority": "Priorité",
     "priorityHigh": "Élevée",
     "priorityMedium": "Moyenne",
