Add Action Plans functionality to CompanyPage and related components
- Introduced Action Plans section in CompanyPageSidebar, allowing users to navigate to action plans.
- Added ActionPlansCard component to display action plans for the selected company.
- Updated SentimentAnalysis component to manage action plan state and display success messages upon saving.
- Enhanced localization files to include new strings for action plans in both English and French, ensuring consistency across languages.
- Refactored markdown formatting logic for action plans to improve rendering and readability.

This update strengthens the objectives management functionality by providing users with actionable insights and enhancing engagement with action plans.

--- a/reviews/src/i18n/locales/en.json
+++ b/reviews/src/i18n/locales/en.json
@@ -348,6 +348,7 @@
     "close": "Close",
     "failedGenerate": "Failed to generate action plan. Please try again.",
     "errorGenerating": "Error generating action plan. Please try again.",
+    "actionPlanSaved": "Action plan has been saved. You can manage this action plan and track progress from the Action Plans menu.",
     "filterLabels": {
       "location": "Location:",
       "from": "From:",
@@ -747,6 +748,7 @@
       "reviews": "Reviews",
       "analytics": "Analytics",
       "objectives": "Objectives",
+      "actionPlans": "Action Plans",
       "locations": "Locations",
       "settings": "Settings"
     }
@@ -969,6 +971,36 @@
       "generatedAt": "Generated",
       "noFailedReviews": "No failed reviews found for this objective. Cannot generate action plan.",
       "generationError": "Failed to generate action plan"
+    }
+  },
+  "actionPlans": {
+    "title": "Action Plans",
+    "subtitle": "View and manage your action plans to improve your business",
+    "noPlans": "No action plans found",
+    "noPlansDescription": "Action plans will appear here once generated from objectives or sentiment analysis.",
+    "actionItems": "Action Items",
+    "notes": "Notes",
+    "addNote": "Add Note",
+    "editNote": "Edit Note",
+    "notePlaceholder": "Enter your note here...",
+    "anonymous": "Anonymous",
+    "confirmDeleteNote": "Delete this note?",
+    "filter": {
+      "sourceType": "Source Type",
+      "allSources": "All Sources",
+      "objective": "Objective",
+      "sentiment": "Sentiment",
+      "status": "Status",
+      "allStatuses": "All Statuses"
+    },
+    "status": {
+      "new": "New",
+      "inProgress": "In Progress",
+      "completed": "Completed"
+    },
+    "sourceType": {
+      "objective": "Objective",
+      "sentiment": "Sentiment"
     }
   }
 }
