Enhance CompaniesCompanyCard with Action Plans Navigation
- Added a new button to view action plans in the CompaniesCompanyCard component, improving navigation for users.
- Introduced an Assignment icon to represent action plans visually.
- Updated localization files to include a new string for "View Action Plans," ensuring consistency across languages.

This update strengthens the user experience by providing direct access to action plans, enhancing overall engagement with company management features.

--- a/reviews/src/i18n/locales/en.json
+++ b/reviews/src/i18n/locales/en.json
@@ -141,6 +141,7 @@
     "singleReview": "review",
     "multipleReviews": "reviews",
     "viewDetails": "View Details",
+    "viewActionPlans": "View Action Plans",
     "myCompanies": "My Companies",
     "otherCompanies": "Other Companies",
     "noCompaniesYetAdmin": "You don't have any companies yet",
