--- a/reviews/src/i18n/locales/fr.json
+++ b/reviews/src/i18n/locales/fr.json
@@ -1011,6 +1011,7 @@
       "objective": "Objectif",
       "sentiment": "Sentiment"
     },
+    "viewDetails": "Voir les détails",
     "addItem": "Ajouter un élément",
     "editItem": "Modifier l'élément",
     "deleteItem": "Supprimer l'élément",
