Enhance ObjectiveProgressChart and SentimentAnalysis with Action Plans Integration
- Added companyId prop to ObjectiveProgressChart and ObjectivesCard for better action plan management.
- Implemented navigation to action plans in both ObjectiveProgressChart and SentimentAnalysis components, improving user experience.
- Updated localization files to include new strings for sentiment action plans and view options, ensuring consistency across languages.
- Enhanced rendering logic to conditionally display action plans based on objective status, providing clearer user guidance.

This update strengthens the integration of action plans within the objectives and sentiment analysis features, enhancing overall user engagement and navigation.

--- a/reviews/src/i18n/locales/en.json
+++ b/reviews/src/i18n/locales/en.json
@@ -351,6 +351,9 @@
     "failedGenerate": "Failed to generate action plan. Please try again.",
     "errorGenerating": "Error generating action plan. Please try again.",
     "actionPlanSaved": "Action plan has been saved. You can manage this action plan and track progress from the Action Plans menu.",
+    "actionPlans": "Sentiment Action Plans",
+    "viewAllPlans": "View All Plans",
+    "morePlansAvailable": "{{count}} more plan(s) available",
     "filterLabels": {
       "location": "Location:",
       "from": "From:",
@@ -984,6 +987,7 @@
       "noPlan": "No action plan generated yet. Click the button above to generate one.",
       "generatedAt": "Generated",
       "noFailedReviews": "No failed reviews found for this objective. Cannot generate action plan.",
+      "viewAll": "View All Plans",
       "generationError": "Failed to generate action plan"
     }
   },
