Update Email Digest Settings and Localization
- Updated the email digest settings in the Companies component to include options for enabling weekly and monthly digest emails.
- Enhanced the CompanyHeader component to manage these new settings, improving user control over email notifications.
- Added localization strings for email digest settings in both English and French, ensuring a consistent user experience across languages.
- Implemented new email notification logging functionality in the Supabase migrations, allowing for better tracking of email execution attempts.

This update strengthens the email notification system by providing users with more control over their preferences and improving the overall management of email communications.

--- a/reviews/src/i18n/locales/en.json
+++ b/reviews/src/i18n/locales/en.json
@@ -184,6 +184,9 @@
     "editCompanyDetails": "Edit Company Details",
     "uploadImage": "Please select an image file",
     "imageTooLarge": "Image must be less than 5MB",
+    "emailDigestSettings": "Email Digest Settings",
+    "weeklyDigestEnabled": "Enable Weekly Digest Emails",
+    "monthlyDigestEnabled": "Enable Monthly Digest Emails",
     "failedUploadLogo": "Failed to upload logo. Please try again.",
     "failedUpdateCompany": "Failed to update company details. Please try again.",
     "editCompanyDialog": "Edit Company",
