--- a/reviews/src/i18n/locales/fr.json
+++ b/reviews/src/i18n/locales/fr.json
@@ -173,6 +173,9 @@
     "saveChanges": "Enregistrer les modifications",
     "uploadImage": "Veuillez sélectionner un fichier image",
     "imageTooLarge": "L'image doit faire moins de 5 Mo",
+    "emailDigestSettings": "Paramètres de résumé par e-mail",
+    "weeklyDigestEnabled": "Activer les e-mails de résumé hebdomadaire",
+    "monthlyDigestEnabled": "Activer les e-mails de rapport mensuel",
     "failedUploadLogo": "Échec du téléchargement du logo. Veuillez réessayer.",
     "failedUpdateCompany": "Échec de la mise à jour des détails de l'entreprise. Veuillez réessayer.",
     "avgRating": "Note moy.",
